--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "movies-list",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version－": "1.0.0",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "joanna",
